# keylist

./: Cargo.toml  README.md  binds.yaml  flake.nix  keylist.desktop  result
src/: app.rs  keys.rs  main.rs
src/config/: bindings.rs  mod.rs
