[package]
name = "keylist"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
gdk-pixbuf = "0.22.0"
gtk4 = "0.11.0"
include_dir = "0.7.4"
indexmap = { version = "2.13.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
